<resources>
    <string name="app_name">WakeOnLan</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="add_computer_fragment_label">Add Computer Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="add_computer">Add Computer</string>
    <string name="host_ip">Host IP</string>
    <string name="host_mac_address">Host MAC Address</string>
    <string name="nickname">NickName</string>
</resources>
