<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.adrienr.wakeonlan.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_addComputer"
            app:destination="@id/addComputer" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.adrienr.wakeonlan.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/addComputer"
        android:name="com.adrienr.wakeonlan.AddComputer"
        android:label="@string/add_computer_fragment_label"
        tools:layout="@layout/fragment_add_computer">
        <action
            android:id="@+id/action_addComputer_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>
